02/08/15-10:44:23: Initial commit
02/08/15-10:46:19: Added changelog file.
02/08/15-16:48:03: Removed experts.dat file from repository
02/08/15-17:06:11: Adding TickReader and ignoring log files.
02/08/15-23:58:38: Updated syntax for TickReader.mq5
02/09/15-17:34:37: Added file generation support for TickReader.
02/09/15-21:12:43: Adding initial implementation for LogManager.
02/10/15-00:16:25: Started implementation of unit test library.
02/10/15-10:46:11: Refactored Test Suite for recursion support.
02/10/15-11:39:01: Added support for ASSERT macro.
02/10/15-17:23:24: Added support for test packages.
02/10/15-17:38:25: Cut Testing header in multiple parts.
02/10/15-22:24:04: Added minimal support to retrieve passed and failed tests.
02/10/15-23:22:37: Added CList usage for TestCases
02/10/15-23:29:15: Added list usage for TestSuites.
02/11/15-09:08:21: Retrieve all test data in TestSessionResult.
02/11/15-13:56:46: Retrieving messages as part of the test data.
02/11/15-16:06:41: Working on test result report page.
02/11/15-16:10:04: Added the html files on the repository.
02/12/15-09:18:43: Adding additional formating for test log page.