@@ -10,7 +10,7 @@
 #include <nerv/tests/sanity_specs.mqh>
 #include <nerv/tests/core_specs.mqh>
 
-BEGIN_TEST_SESSION("MQL5 Tests")
+BEGIN_TEST_SESSION("TestResults")
 
 LOAD_TEST_PACKAGE(sanity_specs)
 LOAD_TEST_PACKAGE(core_specs)
