@@ -18,3 +18,4 @@
 02/11/15-16:06:41: Working on test result report page.
 02/11/15-16:10:04: Added the html files on the repository.
 02/12/15-09:18:43: Adding additional formating for test log page.
+02/12/15-23:22:53: Updated log template to handle colors properly.
